# fastapi-logger

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .vulture  CHANGELOG.md  CODECOV_SETUP.md  CONTAINER_MIGRATION_NOTES.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  docs_and_examples.patch  pyproject.toml  requirements-example.txt  story-2.4-changes.patch  tox.ini  unpushed_commits.patch
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: story.yml
.github/workflows/: ci.yml  docs.yml  project-automation.yml  publish.yml  release-guard.yml  validate-workflows.yml
_build/linkcheck/: output.json  output.txt
docs/: KANBAN_WORKFLOW.md  REVIEW.md  advanced-development.md  api-reference.md  api-reference.rst  architecture-improvements-summary.md  async-patterns-guide.md  conf.py  config.md  config.rst  configuration-factory.md  configuration.md  container-architecture.md  core-concepts.md  enhanced-factory.md  environment-configuration.md  environment-variable-resolution.md  epic-docs-improvement.md  epics.md  error-handling-implementation-summary.md  faq.md  index.md  index.rst  introduction.md  migration-guide-smartcache.md  nested-environment-pattern.md  prd-phase-1-mvp.md  primer.md  processor-development-patterns.md  quickstart.md  requirements.txt  sink-best-practices.md  sink-development.md  sink-performance.md  sink-troubleshooting.md  sprint-planning-weeks-1-4.md  story-13-refactored-summary.md  style-guide.md  troubleshooting.md  user-guide.md  (+1 more)
docs/api-reference/: index.md
docs/examples/: index.md
docs/examples/advanced/: index.md
docs/examples/basic/: index.md
docs/examples/fastapi/: index.md
docs/examples/production/: index.md
docs/examples/sinks/: index.md
docs/guides/: configuration.md  fastapi-integration.md  monitoring-production.md  security.md  sinks.md  testing-development.md
docs/stories/: story-1.1.md  story-1.2.md  story-1.3.md  story-1.4.md  story-1.5.md  story-10.1.md  story-10.2.md  story-10.3.md  story-10.4.md  story-100.1.md  story-100.2.md  story-100.3.md  story-11.1.md  story-11.2.md  story-11.3.md  story-11.4.md  story-12.1.md  story-12.2..md  story-12.3.md  story-12.4.md  story-13.1.md  story-13.2.md  story-13.3.md  story-13.4.md  story-13.5.md  story-13.5a.md  story-13.5b.md  story-13.5c.md  story-13.6.md  story-13.6a.md  story-13.6b.md  story-13.6c.md  story-13.6d.md  story-13.7.md  story-13.7a.md  story-13.7b.md  story-13.7c.md  story-13.8.md  story-13.8a.md  story-13.8b.md  (+55 more)
examples/: 01_basic_setup.py  02_environment_config.py  03_output_formats.py  04_logging_levels.py  05_fastapi_basic.py  06_fastapi_middleware.py  07_fastapi_error_handling.py  08_fastapi_structured_logging.py  09_queue_configuration.py  10_overflow_strategies.py  11_performance_testing.py  12_batch_processing.py  13_loki_sink.py  14_multiple_sinks.py  15_custom_sink.py  16_security_logging.py  17_trace_propagation.py  18_user_context_enrichment.py  19_field_redaction.py  20_automatic_pii_redaction.py  21_level_aware_redaction.py  21_metrics_monitoring.py  22_container_architecture.py  23_configuration_factory.py  24_enhanced_factory.py  async_enricher_examples.py  async_enricher_integration_example.py  custom_enricher_example.py  custom_sink_registry.py  deduplication_example.py  processor_monitoring_example.py  resource_metrics_example.py  sink_testing_examples.py  stdout_sink_example.py  test_corrected_examples.py  test_fastapi_examples.py  test_sinks_examples.py  throttling_example.py  validation_example.py
examples/sink_examples/: elasticsearch_sink.py  postgres_sink.py  redis_sink.py  slack_sink.py
examples/sink_integrations/: Dockerfile  docker_integration.py  fastapi_integration.py  kubernetes_integration.py
scripts/: check_release_guardrails.py  find_classes.py  fix_complex_processor_imports.py  fix_critical_imports.sh  fix_processor_imports.sh  load_test_log_queue.py  manage-story.sh  publish_to_pypi.py  safe_processor_fix.sh  update_test_imports.sh
src/fapilog/: __init__.py  bootstrap.py  container.py  enrichers.py  exceptions.py  httpx_patch.py  middleware.py  monitoring.py  pipeline.py  redactors.py  settings.py
src/fapilog/_internal/: async_enricher.py  async_lock_manager.py  async_pipeline.py  async_processor_base.py  async_task_manager.py  background_cleanup_manager.py  circuit_breaker.py  component_factory.py  component_registry.py  configuration_manager.py  container_logger_factory.py  context.py  deduplication_processor.py  enricher_cache.py  enricher_conditions.py  enricher_factory.py  enricher_lifecycle.py  enricher_registry.py  error_handling.py  lifecycle_manager.py  loki_http_client.py  loki_payload_formatter.py  lru_cache.py  metrics.py  metrics_manager.py  middleware_manager.py  pii_patterns.py  processor.py  processor_error_handling.py  processors.py  (+11 more)
tests/: test_async_cache_operations.py  test_async_enricher_integration.py  test_async_enrichers.py  test_async_integration.py  test_async_lock_management.py  test_async_processor_base.py  test_async_smart_cache.py  test_async_smart_cache_comprehensive.py  test_async_task_manager_coverage.py  test_auto_redactor.py  test_background_cleanup_manager_coverage.py  test_base_sink.py  test_batch_manager.py  test_bootstrap.py  test_bootstrap_factory_integration.py  test_bootstrap_final_win.py  test_bootstrap_pure_di.py  test_component_factory.py  test_component_integration_pure_di.py  test_component_registry.py  test_config_factory.py  test_configuration_manager.py  test_container.py  test_container_architecture_integration.py  test_container_component_registry.py  test_container_concurrency.py  test_container_easy_wins.py  test_container_factory_integration.py  test_container_isolation_integration.py  test_container_logger_factory.py  test_container_metrics_integration.py  test_container_performance.py  test_container_performance_benchmark.py  test_container_pure_di.py  test_container_stress.py  test_context_utils.py  test_contextual_manager.py  test_converted_processors.py  test_debug.py  test_debug_testing.py  (+107 more)
(+71 files in other folders)
